Fixed scrollbar gutter

--- a/vladastos/src/styles.scss
+++ b/vladastos/src/styles.scss
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+//Fixes scrollbar gutter when drawer is open
+html:has(.drawer-toggle:checked) {
+  scrollbar-gutter: auto;
+}
